# TradingModel

./: .gitignore  pyproject.toml
autoformer/: model.py
autoformer/layers/: enc_dec.py
duet/: config.py  model.py
duet/layers/: attention.py  auto_correlation.py  cluster.py  decomp.py  encoder.py  extractors.py  masking.py  revin.py
src/: arima.py  backtest.py  dataset.py  download.py  parseset.py  play.py  tdataset.py  tist.py  train.py  trainer.py  ttrain.py  utils.py
src/data/: __init__.py  dataset.py  download.py  manager.py  utils.py
src/duet/: model.py
src/former/: config.py
src/former/utils/: masked_attention.py
src/scaler/: __init__.py  arctan.py  base.py  cache.py  minmax.py  robust.py
trader/: env.py  model.py
trashcan/: dataset copy.py  irealytrid.py  model.py  timer.py  transformer.py
trashcan/autoformer/: model.py
trashcan/autoformer/layers/: embed.py  linear_extractor_cluster.py  linear_pattern_extractor.py
trashcan/autoformer/utils/: masked_attention.py
trashcan/former_un/: config.py  model.py
trashcan/former_un/layers/: linear_extractor_cluster.py
trashcan/former_un/utils/: masked_attention.py
