[project]
name = "trading-model"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "ccxt>=4.4.78",
    "numpy>=2.2.5",
    "pandas>=2.3.0",
    "plotly>=6.0.1",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "tsfs",
]

[dependency-groups]
dev = []
lint = ["pyright>=1.1.397", "ruff>=0.11.0"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
tsfs = { git = "https://github.com/ToshibaMastr/TimeSeriesForecasting" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
