[project]
name = "trading-model"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.3.0",
    "plotly>=6.0.1",
    "rich>=14.0.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "tsfs",
    "klines"
]

[dependency-groups]
dev = []
lint = ["pyright>=1.1.397", "ruff>=0.11.0"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
tsfs = { git = "https://github.com/ToshibaMastr/TimeSeriesForecasting" }
klines = { git = "https://github.com/ToshibaMastr/binance-klines.git" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
